--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Home</title>
+        <link rel="stylesheet" href="style.css"/>
+<!--        <style>-->
+<!--            .demo{-->
+<!--                font-size: 50px;-->
+<!--                color:red;-->
+<!--            }-->
+<!--        </style>-->
+    </head>
+    <body>
+<!--        <spen class="demo">some content</spen>-->
+<!--        <spen class="demo">some content</spen>-->
+<!--        <spen style="font-size: 60px; color: blue;">some content</spen>-->
+<!--        <div class="box-one">-->
+<!--            some content-->
+<!--        </div>-->
+<!--        <div class="box-two"></div>-->
+<!--        <div class="box-three"></div>-->
+        <div class="col-3 header-height"> </div>
+        <div class="col-9 header-height"> </div>
+
+        <div class="col-12 menu-height"> </div>
+
+        <div class="col-3 content-height"> </div>
+        <div class="col-9 content-height"> </div>
+
+        <div class="col-12 footer-height"> </div>
+    </body>
 </html>
